fix: align left on collection item

--- a/src/pages/blog/components/Collection/index.module.scss
+++ b/src/pages/blog/components/Collection/index.module.scss
@@ -8,7 +8,8 @@
     display: flex;
     width: 100%;
     flex-flow: wrap;
-    justify-content: space-around;
+    justify-content: left;
+    gap: 5px;
   }
 }
 
